Updated main.js to include new fields and export to CSV

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Canada Code Clubs</title>
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
     <div class="container">
